src/css/cv.css
body {
    background-color: #4297A0;
    display: flex;
    justify-content: center;
    font-family: 'Roboto', sans-serif;
    overflow-y:scroll;
}

nav {
    background-color: #E57F84;
}

#layout-mid {
    z-index: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: max-content;
    padding: 100px 50px 50px 50px;
    width: 50%;
}

#layout-mid.subtext {
    overflow: hidden;
}

h1 {
    text-align: center;
    font-size: 64px;
    font-weight: 900;
    animation: fadeIn 300ms forwards;
}

h4 {
    text-align: center;
    font-size: 24px;
    font-weight: 500;
    opacity: 0;
    animation: fadeIn 300ms forwards;
    animation-delay: 100ms;
}

.dropdown {
    user-select: none;
    display: flex;
    align-items: center;
    justify-content: start;
    width: 100%;
    height: 50px;
    cursor:pointer;
    background-color: #00000017;
    opacity: .8;
    transition: opacity 200ms;
    transition: background-color 200ms;
    margin-bottom: 10px;
}

.dropdown img {
    margin-left: auto;
    height: 50px;
    opacity: .5;
    rotate: 90deg;
    transition: rotate 200ms;
}

.dropdown img:hover {
    rotate: 45deg;
}

.dropdown p {
    margin: 10px;
    font-size: 32px;
    opacity: .5;
}


.dropdown:hover {
    opacity: 1;
    background-color: rgba(0, 0, 0, 0.171);
}

.subtext {
    width: 100%;
    height: auto;
    background-color: rgba(209, 209, 209, 0.2);
    margin-bottom: 10px;
}

.subtext p{
    padding: 10px;
    font-size: 20px;
    font-weight: 400;
    opacity: .5;
}

.subtext h3 {
    font-size: 24px;
    padding: 10px;
    font-weight: 600;
    color: #4297A0;
}

.subtext h5 {
    padding-left: 10px;
    font-size: 14px;
}

#sub1, #sub2, #sub3, #sub4 {
    display: none;
}

#drop1 {
    opacity: 0;
    animation: fadeIn 300ms forwards;
    animation-delay: 100ms;
}

#drop2 {
    opacity: 0;
    animation: fadeIn 300ms forwards;
    animation-delay: 200ms;
}

#drop3 {
    opacity: 0;
    animation: fadeIn 300ms forwards;
    animation-delay: 300ms;
}

#drop4 {
    opacity: 0;
    animation: fadeIn 300ms forwards;
    animation-delay: 400ms;
}

#space {
    position: fixed;
    z-index: 0;
    height: 100%;
    width: 50%;
    padding: 50px;
    background-color: white;
    animation: moveIn 1s;
}

/* Start of animations */

@keyframes fadeIn {
    from {
        opacity: 0;
        transform: scale(0);
    }
    to {
        opacity: 1;
        transform: scale(1);
    }
}

@keyframes moveIn {
    from {
        height: 0px;
    }
    to {
        height: 100%;
    }
}

